feat: coins
* chore: api coingecko

* chore: create coingecko repository

* chore: create search coins usecase

* feat: impl search coins service

* test: improve tests

* docs: update api spec

* refactor: improve coins spec

* test: coingecko repository

* test: search coins usecase

* chore: tslint

* chore: formatter

* chore: create getting coin market method at repository

* feat: impl getting coin market usecase

* refactor: improve search coin usecase

* test: get coin market requests

* docs: api spec

* chore: mysql

* refactor: include volume at get coin market

* refactor: remove vitest setup

---------
