# api/openapi.yaml
@@ -6,6 +6,112 @@ info:
 components:
   schemas: {}
 paths:
+  /coins/search:
+    get:
+      operationId: searchCoins
+      summary: Search coins
+      tags:
+        - Coins
+      description: Search coins
+      parameters:
+        - schema:
+            type: string
+          in: query
+          name: query
+          required: true
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  items:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        name:
+                          type: string
+                        symbol:
+                          type: string
+                          nullable: true
+                        image:
+                          type: string
+                          nullable: true
+                      required:
+                        - id
+                        - name
+                      additionalProperties: false
+                required:
+                  - items
+                additionalProperties: false
+  /coins/{id}/market:
+    get:
+      operationId: getCoinMarket
+      summary: Get coin market
+      tags:
+        - Coins
+      description: Get coin market
+      parameters:
+        - schema:
+            type: string
+            enum:
+              - usd
+              - eur
+              - brl
+            default: usd
+          in: query
+          name: currency
+          required: false
+        - schema:
+            type: string
+          in: path
+          name: id
+          required: true
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                  name:
+                    type: string
+                  symbol:
+                    type: string
+                  image:
+                    type: string
+                  currentPrice:
+                    type: number
+                  marketCap:
+                    type: number
+                  marketCapRank:
+                    type: number
+                  volume:
+                    type: number
+                  volumeHigh24h:
+                    type: number
+                  volumeHLow24h:
+                    type: number
+                required:
+                  - id
+                  - name
+                  - symbol
+                  - image
+                  - currentPrice
+                  - marketCap
+                  - marketCapRank
+                  - volume
+                  - volumeHigh24h
+                  - volumeHLow24h
+                additionalProperties: false
   /users:
     post:
       operationId: createUser
